# data_prep

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: README.md  create_sample_data.py  sample_data.jsonl  sample_data.parquet
src/: anonymize_text.py  cluster_embeddings.py  embed_reports.py  read_parquet.py  streamlit_report_comparison.py  translate_jsonl.py  translate_jsonl_deepl.py
