[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parquet-reader"
version = "0.1.0"
description = "A comprehensive toolkit for processing, analyzing, and anonymizing medical reports stored in Parquet format"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Constantin Seibold"}
]
keywords = ["parquet", "medical-reports", "nlp", "anonymization", "embeddings", "clustering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "polars>=0.19.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "flair>=0.13.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "streamlit>=1.28.0",
    "tqdm>=4.65.0",
    "striprtf>=0.0.26",
    "requests>=2.31.0",
    "deepl>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
accelerate = [
    "accelerate>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/parquet_reader"
Repository = "https://github.com/yourusername/parquet_reader"
Issues = "https://github.com/yourusername/parquet_reader/issues"

[project.scripts]
parquet-reader = "src.read_parquet:main"
parquet-anonymize = "src.anonymize_text:main"
parquet-translate = "src.translate_jsonl:main"
parquet-translate-deepl = "src.translate_jsonl_deepl:main"
parquet-embed = "src.embed_reports:main"
parquet-cluster = "src.cluster_embeddings:main"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
